# libbdplus

./: CMakeLists.txt
src/examples/: bdplus_test.c
src/file/: configfile.c
src/util/: mutex.c
